<resources>
    <string name="app_name">Flight</string>
    <string name="title_activity_login_page">login_page</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="e_mail">E-Mail</string>
    <string name="sign_in">SIGN IN</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="dob">DOB</string>
    <string name="book_your_flight">Book Your Flight</string>
    <string name="one_way">One Way</string>
    <string name="round_trip">ROUND TRIP</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="departure">Departure</string>
    <string name="adults">Adults</string>
    <string name="children">Children</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="passenger_s">Passenger(s)</string>
    <string name="return1">Return</string>
    <string name="_0">0</string>
    <string name="book">Book</string>
    <string name="_1">1</string>
</resources>