<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flightBookButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="20dp"
    tools:context=".firstpage">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="356dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="673dp"
        android:gravity="center|start"
        android:includeFontPadding="false"
        android:text="@string/book_your_flight"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/oneWayButton"
        android:layout_width="178dp"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="638dp"
        android:gravity="clip_horizontal|center|center_vertical"
        android:text="@string/one_way"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/roundTripButton"
        android:layout_width="178dp"
        android:layout_height="35dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="638dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/round_trip"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TouchTargetSizeCheck" />

    <!--<EditText
        android:id="@+id/bookFrom"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="218dp"
        android:layout_marginBottom="573dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/from"
        android:inputType="textPersonName"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />-->


    <TextView
        android:id="@+id/bookFrom"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:gravity="bottom|center_horizontal|left|center_vertical"
        android:paddingStart="5dp"
        android:text="@string/from"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/bookTo"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oneWayButton" />

    <!--<EditText
        android:id="@+id/bookTo"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="219dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="572dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/to"
        android:inputType="textPersonName"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />-->


    <TextView
        android:id="@+id/bookTo"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:gravity="bottom|center_horizontal|left|center_vertical"
        android:paddingStart="5dp"
        android:text="@string/to"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundTripButton" />

    <!--<EditText
        android:id="@+id/bookDeparture"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/departure"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#546E7A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookFrom"
        tools:ignore="TouchTargetSizeCheck" />-->

    <!--<EditText
        android:id="@+id/bookReturn"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="219dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/return1"
        android:inputType="textPersonName"
        android:textColorHint="#546E7A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookTo"
        tools:ignore="TouchTargetSizeCheck" />-->

    <Button
        android:id="@+id/decreaseButton1"
        android:layout_width="50dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:text="@string/minus"
        android:textColor="#795548"
        app:layout_constraintEnd_toStartOf="@+id/adultCount"
        app:layout_constraintTop_toBottomOf="@+id/bookDeparture"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/adultCount"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="206dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="85dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:text="@string/_1"
        android:textColor="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookReturn"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/increaseButton1"
        android:layout_width="50dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/plus"
        app:layout_constraintStart_toEndOf="@+id/adultCount"
        app:layout_constraintTop_toBottomOf="@+id/bookReturn"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="105dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:text="@string/adults"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/decreaseButton1"
        app:layout_constraintTop_toBottomOf="@+id/bookDeparture" />


    <Button
        android:id="@+id/decreaseButton2"
        android:layout_width="50dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/minus"
        android:textColor="#795548"
        app:layout_constraintEnd_toStartOf="@+id/childrenCount"
        app:layout_constraintTop_toBottomOf="@+id/decreaseButton1"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/childrenCount"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="206dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="85dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:textColor="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adultCount"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
        tools:text="0" />

    <Button
        android:id="@+id/increaseButton2"
        android:layout_width="50dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/childrenCount"
        app:layout_constraintTop_toBottomOf="@+id/increaseButton1"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:layout_width="105dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:text="@string/children"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/decreaseButton2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/passengersCount"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="302dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/passenger_s"
        android:inputType="number"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="217dp"
        android:text="@string/book"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passengersCount" />

    <TextView
        android:id="@+id/bookDeparture"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:gravity="bottom|center_horizontal|left|center_vertical"
        android:paddingStart="5dp"
        android:text="@string/departure"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookFrom" />

    <TextView
        android:id="@+id/bookReturn"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:gravity="bottom|center_horizontal|left|center_vertical"
        android:paddingStart="5dp"
        android:text="@string/return1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toEndOf="@+id/bookDeparture"
        app:layout_constraintTop_toBottomOf="@+id/bookTo" />


</androidx.constraintlayout.widget.ConstraintLayout>